--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,8 +16,12 @@
 
     <!--Search screen-->
     <string name="clear_button">clear button</string>
+    <string name="search">Search</string>
 
     <!--Recycler view item-->
     <string name="default_text_recycler_view">Australian Dollar • AUD</string>
+    <string name="currency_text_recycler_view">%1$s • %2$s</string>
+    <string name="flag">flag</string>
+
 
 </resources>
