--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,10 @@
     <string name="money_input">Input</string>
     <string name="convert_result">Result</string>
     <string name="currency_image">currency image</string>
-    <string name="currency_input_format">%1$s %2$s</string>
+    <string name="result_currency_text_format">%1$s %2$s  </string>
+    <string name="base_currency_text_format">%1$s %2$s =</string>
     <string name="no_input_error">Please enter a value</string>
+    <string name="enter_a_value">Enter a value</string>
 
     <!--Settings screen-->
     <string name="back_button">back button</string>
@@ -24,6 +26,7 @@
     <string name="default_text_recycler_view">Australian Dollar • AUD</string>
     <string name="currency_text_recycler_view">%1$s • %2$s</string>
     <string name="flag">flag</string>
+
 
 
 </resources>
