--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="base_currency_text_format">%1$s %2$s =</string>
     <string name="no_input_error">Please enter a value</string>
     <string name="enter_a_value">Enter a value</string>
+    <string name="last_input">Last input</string>
 
     <!--Settings screen-->
     <string name="back_button">back button</string>
