--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,4 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">Currency Converter</string>
 
 
@@ -10,7 +12,7 @@
     <string name="result_currency_text_format">%1$s %2$s  </string>
     <string name="base_currency_text_format">%1$s %2$s =</string>
     <string name="no_input_error">Please enter a value</string>
-    <string name="enter_a_value">Ну введи же уже</string>
+    <string name="enter_a_value">Enter a value</string>
     <string name="last_input">Last input</string>
 
     <!--Settings screen-->
