--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,4 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">Currency Converter</string>
 
 
@@ -10,12 +12,12 @@
     <string name="result_currency_text_format">%1$s %2$s  </string>
     <string name="base_currency_text_format">%1$s %2$s =</string>
     <string name="no_input_error">Please enter a value</string>
-    <string name="enter_a_value">Ну введи же уже</string>
+    <string name="enter_a_value">Введите значение</string>
     <string name="last_input">Last input</string>
 
     <!--Settings screen-->
     <string name="back_button">back button</string>
-    <string name="settings">Settings</string>
+    <string name="settings">Настройки ежжи</string>
     <string name="dark_theme">Dark theme</string>
     <string name="language">Language</string>
 
@@ -27,5 +29,4 @@
     <string name="default_text_recycler_view">Australian Dollar • AUD</string>
     <string name="currency_text_recycler_view">%1$s • %2$s</string>
     <string name="flag">flag</string>
-
 </resources>
