--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="app_name">Currency Converter</string>
+    <string name="converter">Converter</string>
 
     <!--Converter screen-->
     <string name="change_currency">button to change currency</string>
@@ -57,5 +58,8 @@
     <string name="thb">Thai Baht</string>
     <string name="uzs">Uzbekistan Som</string>
     <string name="btc">Bitcoin</string>
+
+    <!--History screen-->
+    <string name="history">History</string>
 
 </resources>
